--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to our IMDB Clone!</h1>
 
 <ul>
-  <li><a href="<%= new_actor_path %>">New Actor</a>
-  <li><a href="<%= new_director_path %>">New Director</a>
+  <li><a href="<%= new_actor_path %>">New Actor</a></li>
+  <li><a href="<%= new_director_path %>">New Director</a></li>
 </ul>
