--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,3 +1,10 @@
 <% @genres.each do |genre| %>
   <%= genre.name %>
 <% end %>
+
+<%= form_for @new_genre  do |f| %> %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+
+  <%= f.submit %>
+<% end %> 
