--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -2,6 +2,7 @@
 
 <p>Synopsis of the movie:</p>
 <p><%= @movie.description %></p>
+<p>Rating: <%= @movie.rating %> </p>
 
 <p>Directed by: <%= @movie.director.name %></p>
 
