--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,3 +1,5 @@
+<p>Highest Rated Movie: <%= @highest_rated.title %>, <%= @highest_rated.rating %> stars </p>
+
 <p>Average Rating: <%= @average_rating %> </p>
 <% @movies.each do |movie| %>
   <%= movie.title %>
