--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,4 +1,5 @@
 <p>Highest Rated Movie: <%= @highest_rated.title %>, <%= @highest_rated.rating %> stars </p>
+<p>Lowest Rated Movie: <%= @lowest_rated.title %>, <%= @lowest_rated.rating %> stars </p>
 
 <p>Average Rating: <%= @average_rating %> </p>
 <% @movies.each do |movie| %>
