implements genres in nav bar

--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -4,7 +4,7 @@
 
 <% if @admin %>
 
-  <%= form_for @new_genre  do |f| %> %>
+  <%= form_for @new_genre  do |f| %>
     <%= f.label :name %>
     <%= f.text_field :name %>
     <%= f.submit %>
