--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -3,6 +3,8 @@
   <a href="<%= directors_path %>">Directors</a>
   <a href="<%= movies_path %>">Movies</a>
   <a href="<%= actors_path %>">Actors</a>
+  <a href="<%= genres_path %>">Genres</a>
+
 
   <% if current_user %>
     <%= link_to "Log out", logout_path %>
