implements movie title being link in genre show page

--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -3,5 +3,5 @@
 
 <p>Average Rating: <%= @average_rating %> </p>
 <% @movies.each do |movie| %>
-  <%= movie.title %>
+  <%= link_to  "#{movie.title}", movie_path(movie.slug) %>
 <% end %>
