--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -2,7 +2,7 @@
   <%= link_to  "#{genre.name}", genre_path(genre) %>
 <% end %>
 
-<% if @admin %>
+<% if current_admin? %>
 
   <%= form_for @new_genre  do |f| %>
     <%= f.label :name %>
